# free-range-rust

./: .gitignore  Cargo.toml  flake.nix  thing.sql  wildfire.db  wildfire_config.json
.github/workflows/: ci-cd.yml
bindings/python/: Cargo.toml
bindings/python/src/: lib.rs
core/: Cargo.toml
core/src/: backend.rs  config.rs  env.rs  error.rs  lib.rs  logging.rs  macros.rs  main.rs  spaces.rs  state.rs  transition.rs
core/src/cuda/: mod.rs
core/src/simd/: mod.rs
core/src/wildfire/: agent.rs  config.rs  entities.rs  error.rs  mod.rs  state.rs  step.rs  transition.rs  transitions.rs
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
simulator/: Cargo.toml
simulator/fuzz_targets/: wildfire_fuzz.rs
simulator/src/: main.rs
src/: spaces.rs
tests/: Cargo.toml  test_len.py
