[package]
name = "free_range_rust"
version = "0.1.0"
edition = "2024"

[features]
arbitrary = ["dep:arbitrary"]
fuzz = ["arbitrary"]

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }
bumpalo = { version = "3.14", features = ["collections"] }
chrono = "0.4.42"
color-eyre = "0.6.5"
csv = "1.3.1"
itertools = "0.12"
rand = "0.8"
rayon = "1.11.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-error = "0.2"
tracing-subscriber = "0.3"
uuid = { version = "1.18.1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
paste = "1.0"
