[package]
name = "simulator"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies.free_range_rust]
path = "../core"
features = ["fuzz"]

[dependencies]
bumpalo = { version = "3.14", features = ["collections"] }
clap = { version = "4.0", features = ["derive"] }
color-eyre = "0.6.5"
libfuzzer-sys = "0.4"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-async-std", "sqlite"] }


[[bin]]
name = "wildfire_fuzz"
path = "fuzz_targets/wildfire_fuzz.rs"
